--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - db
 
   db:
-    image: postgres
+    image: postgres:16
     environment:
       POSTGRES_USER: app_user
       POSTGRES_PASSWORD: app_password
